--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
     "start": "node dist/main"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^24.1.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "jiti": "^2.5.1",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.5",
