--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
-    "dev": "jiti src/main.ts",
-    "build": "rimraf dist && tsc",
-    "start": "node dist/main"
+    "dev": "tsx src/main.ts",
+    "dev:watch": "tsx watch src/main.ts",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/main",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -11,9 +14,10 @@
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
-    "jiti": "^2.5.1",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   },
