--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "dev": "tsx src/main.ts",
-    "dev:watch": "tsx watch src/main.ts",
+    "dev": "bun run src/main.ts",
+    "dev:watch": "bun run --watch src/main.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/main",
     "lint": "eslint .",
@@ -17,7 +17,6 @@
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   },
