--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "dev:watch": "bun run --watch src/main.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/main",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/bun": "^1.2.19",
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
