--- a/tsconfig.json
+++ b/tsconfig.json
@@ -112,5 +112,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/", "eslint.config.mjs", ".prettierrc.mjs"]
+  "include": ["src/", "test/", "eslint.config.mjs", ".prettierrc.mjs"]
 }
