--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@nestjs/testing": "^11.1.5",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/bun": "^1.2.19",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   },
