--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.5",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.5",
-    "@nestjs/platform-express": "^11.1.5"
+    "@nestjs/platform-express": "^11.1.5",
+    "@nestjs/typeorm": "^11.0.0",
+    "pg": "^8.16.3",
+    "typeorm": "^0.3.25"
   }
 }
