docs: add readme and update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Application Environment
+NODE_ENV=development
+
+# Database Configuration
 POSTGRES_USERNAME=root
 POSTGRES_PASSWORD=root
 POSTGRES_DATABASE=example
