--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "test": "bun test",
     "test:watch": "bun test --watch",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "migration:gen": "bun tools/generate-migrations.ts generate",
+    "migration:run": "bun tools/generate-migrations.ts run",
+    "migration:revert": "bun tools/generate-migrations.ts revert"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
